--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "aki-blog",
 	"version": "0.1.0",
 	"private": true,
+	"engines": {
+		"node": "20.10.0",
+		"npm": "10.2.3"
+	},
 	"scripts": {
 		"dev": "astro dev --host",
 		"build": "astro build",
@@ -11,20 +15,20 @@
 		"lint:fix": "npm run lint -- --fix; prettier --write './**/*'"
 	},
 	"dependencies": {
-		"@astrojs/sitemap": "^3.0.0",
-		"astro": "^3.0.12",
+		"@astrojs/sitemap": "^3.0.3",
+		"astro": "^3.6.4",
 		"cheerio": "^1.0.0-rc.12",
-		"highlight.js": "^11.8.0",
-		"microcms-js-sdk": "^2.5.0",
-		"sass": "^1.63.6"
+		"highlight.js": "^11.9.0",
+		"microcms-js-sdk": "^2.7.0",
+		"sass": "^1.69.5"
 	},
 	"devDependencies": {
-		"@typescript-eslint/parser": "^6.6.0",
-		"eslint": "^8.49.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-config-standard-with-typescript": "^39.0.0",
-		"eslint-plugin-astro": "^0.29.0",
-		"prettier": "^3.0.3",
-		"prettier-plugin-astro": "^0.12.0"
+		"@typescript-eslint/parser": "^6.13.1",
+		"eslint": "^8.55.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-config-standard-with-typescript": "^40.0.0",
+		"eslint-plugin-astro": "^0.30.0",
+		"prettier": "^3.1.0",
+		"prettier-plugin-astro": "^0.12.2"
 	}
 }
