--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
 		"build": "astro build",
 		"preview": "astro preview --host",
 		"astro": "astro",
-		"lint": "eslint './src/**/*.{ts,tsx,astro}'",
-		"lint:fix": "npm run lint -- --fix; prettier --write './**/*'"
+		"format": "prettier --write './**/*'",
+		"lint": "ESLINT_USE_FLAT_CONFIG=true eslint .",
+		"lint:fix": "npm run lint -- --fix && npm run format"
 	},
 	"dependencies": {
-		"@astrojs/sitemap": "^3.1.4",
-		"astro": "^4.7.0",
-		"cheerio": "^1.0.0-rc.12",
-		"highlight.js": "^11.9.0",
-		"microcms-js-sdk": "^3.1.1",
-		"sass": "^1.75.0"
+		"@astrojs/sitemap": "3.2.1",
+		"astro": "4.16.6",
+		"cheerio": "1.0.0-rc.12",
+		"highlight.js": "11.9.0",
+		"microcms-js-sdk": "3.1.1",
+		"sass": "1.75.0"
 	},
 	"devDependencies": {
-		"@typescript-eslint/parser": "^6.13.1",
-		"eslint": "^8.55.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-config-standard-with-typescript": "^40.0.0",
-		"eslint-plugin-astro": "^1.0.3",
-		"prettier": "^3.2.5",
-		"prettier-plugin-astro": "^0.13.0"
+		"@eslint/js": "9.8.0",
+		"eslint": "8.57.0",
+		"eslint-config-prettier": "9.1.0",
+		"eslint-plugin-astro": "1.1.1",
+		"globals": "15.8.0",
+		"prettier": "3.2.5",
+		"prettier-plugin-astro": "0.13.0",
+		"prettier-plugin-sh": "0.14.0",
+		"typescript-eslint": "7.18.0"
 	}
 }
