--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
 		"lint:fix": "npm run lint -- --fix && npm run format"
 	},
 	"dependencies": {
+		"@akimeaki/null-to-undefined": "1.0.1",
+		"@akimeaki/reset-css": "0.1.0",
 		"@astrojs/sitemap": "3.2.1",
+		"@types/jsdom": "21.1.7",
 		"astro": "4.16.6",
-		"cheerio": "1.0.0-rc.12",
-		"highlight.js": "11.9.0",
+		"jsdom": "25.0.1",
 		"microcms-js-sdk": "3.1.1",
-		"sass": "1.75.0"
+		"sass": "1.75.0",
+		"shiki": "1.22.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "9.8.0",
