--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
 	"dependencies": {
 		"@akimeaki/null-to-undefined": "1.0.1",
 		"@akimeaki/reset-css": "0.3.0",
+		"@astrojs/cloudflare": "12.2.1",
 		"@astrojs/sitemap": "3.2.1",
-		"@types/jsdom": "21.1.7",
-		"astro": "4.16.6",
-		"jsdom": "25.0.1",
+		"astro": "5.1.9",
+		"cheerio": "1.0.0",
 		"microcms-js-sdk": "3.1.1",
 		"sass": "1.75.0",
 		"shiki": "1.22.0"
